Bug 141267 - FILESAVE: PPTX: Fail to save document with media
Summary: FILESAVE: PPTX: Fail to save document with media
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2021-03-26 15:01 UTC by Xisco Faulí
Modified: 2025-02-11 01:21 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (201.91 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2021-03-26 15:01 UTC, Xisco Faulí
Details
another file affected by the same issue (971.50 KB, application/vnd.ms-powerpoint)
2021-03-26 15:35 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2021-03-26 15:01:49 UTC
Created attachment 170764 [details]
sample file

Steps to reproduce:
1. Open attached document
2. Save document as PPTX

-> Error saving the document. Write Error. The file could not be written

Reproduced in

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 3e4eb070787d4d44b3bdc95046e5b231dbbef42b
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2021-03-26 15:02:53 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=cf5fa358a6bf6e7c0aae2dca1e8fa3334d95ebdb

author	Miklos Vajna <vmiklos@collabora.com>	2021-01-25 17:34:28 +0100
committer	Miklos Vajna <vmiklos@collabora.com>	2021-01-25 19:23:59 +0100
commit cf5fa358a6bf6e7c0aae2dca1e8fa3334d95ebdb (patch)
tree 1997e7fd65782c2861533d6d3416613a9f9225c1
parent 0b39d386e4742afa4efcf293baf0e2922505306a (diff)
PPTX export: fix missing audio anim node for slide narrations

Bisected with: bibisect-linux64-7.2

Adding Cc: to Miklos Vajna

[Bug found by office-interoperability-tools]
Comment 2 Xisco Faulí 2021-03-26 15:35:57 UTC
Created attachment 170767 [details]
another file affected by the same issue
Comment 3 Commit Notification 2021-04-07 07:46:28 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9ac1d3ac65b198f739421f39ab3adc65d35a0908

tdf#141267 PPTX export: fix handling of audio nodes with non-media source

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Miklos Vajna 2021-04-07 07:50:41 UTC
I think this was a master-only problem, so no backport.
Comment 5 Xisco Faulí 2021-04-21 08:19:38 UTC
Verified in

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 93bb5fcba9e58eeeaaed9521c3bb4eecf9b91ac1
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Miklos, thanks for fixing this issue!!