tdf#141267 PPTX export: fix handling of audio nodes with non-media source

Regression from commit cf5fa358a6bf6e7c0aae2dca1e8fa3334d95ebdb (PPTX
export: fix missing audio anim node for slide narrations, 2021-01-25),
the problem was that the audio source can be any kind of shape, not only
a media shape.

Fix the problem by explicitly checking of the shape has a media URL.

Change-Id: I2bdde0f9ed3576f307aabff5e39d441f295c203f